# mlops-platform

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci.yml
docker/: Dockerfile.api  Dockerfile.mlflow
docs/: architecture.html
monitoring/: prometheus.yml  prometheus_rules.yml
monitoring/grafana/dashboards/: mlops_dashboard.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
scripts/: demo.py
src/: __init__.py  config.py
src/ab_testing/: __init__.py  ab_test_manager.py
src/drift/: __init__.py  drift_detector.py
src/models/: __init__.py  model_wrappers.py
src/monitoring/: __init__.py  metrics_collector.py
src/pipeline/: __init__.py  retrain_pipeline.py
src/registry/: __init__.py  model_registry.py
src/serving/: __init__.py  api.py
tests/: conftest.py  test_ab_testing.py  test_api.py  test_drift.py  test_models.py  test_monitoring.py  test_pipeline.py
